--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     },
     "files": [
       "dist/**/*",
-      "dist-electron/**/*"
+      "dist-electron/**/*",
+      "assets/**/*"
     ],
     "mac": {
       "category": "public.app-category.productivity",
